fix minor issues in notes using ai

--- a/Notes/Part 1/5. The Admin Site.md
+++ b/Notes/Part 1/5. The Admin Site.md
@@ -14,8 +14,8 @@ python manage.py changepassword <username>
 
 <br>
 
-Side-note: We can change the admin's headings if required:  
-In base `urls.py` of our project, do:
+Side-note: We can change the admin headings if required:  
+In the base `urls.py` of our project, do:
 
 ```py
 admin.site.site_header = 'Storefront Admin'
@@ -35,7 +35,7 @@ admin.site.register(models.<ModelName>)
 To see human-readable objects at `127.0.0.1:8000/admin/<app_name>/<modelname>`:  
 Define the `__str__` method in the model class.
 
-To set a default ordering to the objects which would be used in the admin page, and it would also be there while querying defining how the objects are returned in the QuerySet by default:
+To set a default ordering of the objects (used in the admin page and when querying, defining how objects are returned in a QuerySet by default):
 
 ```py
 class Meta:
@@ -44,8 +44,8 @@ class Meta:
 
 ## Customizing the List Page
 
-We can do this by defining a `<Model>Admin` class, and setting some attributes:  
-Also, if we've added the `<Model>Admin` class, then we should change the `register` to decorator for code conciseness and encapsulation:
+We can do this by defining a `<Model>Admin` class and setting some attributes.  
+Also, if we've added the `<Model>Admin` class, then we should change the `register` to a decorator for better code conciseness and encapsulation:
 
 ```py
 @admin.register(models.Product)
@@ -56,13 +56,13 @@ class ProductAdmin(admin.ModelAdmin):
     list_per_page = 10
 ```
 
-(`ordering` is redundant here if `ordering` is set in `class Meta`, unless different ordering is required in admin.)
+(`ordering` is redundant here if `ordering` is already set in `class Meta`, unless a different ordering is required in the admin.)
 
 `ModelAdmin` options: https://docs.djangoproject.com/en/5.2/ref/contrib/admin/#modeladmin-options
 
 ## Adding Computed Columns
 
-Suppose if want to display `inventory_status` (Low/OK) instead of `inventory` (or with `inventory`) which is an `int`:
+Suppose we want to display `inventory_status` (Low/OK) instead of `inventory` (or along with it), which is an `int`:
 
 ```py
 @admin.register(models.Product)
@@ -78,14 +78,14 @@ class ProductAdmin(admin.ModelAdmin):
 
 > See: [Django ORM > Selecting Related Objects](/Notes/Part%201/4.%20Django%20ORM.md#selecting-related-objects)
 
-To display the related field's column name in current table (e.g., we want to display the orders with their customer name in the admin order page `/admin/store/order`):
+To display a related field's column name in the current table (e.g., we want to display orders with their customer name in the admin order page `/admin/store/order`):
 
 ### Sometimes
 
-Only if the field that we want to display (in current case `customer.first_name`) can be used in `__str__` of that model class, we can just:
+Only if the field we want to display (in this case, `customer.first_name`) can be used in the `__str__` method of that model class, we can just:
 
-1. Define `__str__` in `Customer` class.
-2. Have following in `admin.py`:
+1. Define `__str__` in the `Customer` class.
+2. Use the following in `admin.py`:
 
    ```py
    @admin.register(models.Order)
@@ -94,13 +94,13 @@ Only if the field that we want to display (in current case `customer.first_name`
        ordering = ["id"]
    ```
 
-Its clear why does this work.
+It's clear why this works.
 
 But what if the field we want to display is not suitable for `__str__`?
 
 ### Solution
 
-Just like we did in ORM section, we can `customer.first_name`, and just like `select_related()`, we've `list_select_related` attr to not get **N+1 query problem**:
+Just like we did in the ORM section, we can do `customer.first_name`, and just like `select_related()`, we've `list_select_related` attr here to avoid the **N+1 query problem**:
 
 ```py
 @admin.register(models.Order)
@@ -113,11 +113,11 @@ class OrderAdmin(admin.ModelAdmin):
         return order.customer.first_name
 ```
 
-> For this particular example, since `__str__` val is same as what we want, we don't really need this solution.
+> For this particular example, since the `__str__` value is the same as what we want, we don't really need this solution.
 
 ## Overriding the Base QuerySet
 
-Suppose we want to show the product count on `/admin/store/collection`, we can do:
+Suppose we want to show the product count on `/admin/store/collection`. We can do:
 
 ```py
 @admin.register(models.Collection)
@@ -156,7 +156,7 @@ class CollectionAdmin(admin.ModelAdmin):
 
 ## Providing Links to Other Pages
 
-We can add a link to a column values using computed method:
+We can add a link to column values using a computed method:
 
 ```py
     def products(self, collection):
@@ -168,9 +168,9 @@ We can add a link to a column values using computed method:
         return format_html('<a href="{}">{}</a>', url, collection.product_count)
 ```
 
-- `reverse` - Builds the url dynamically independent on url pattern change. Format: `admin:<app_name>_<target_modelname>_<pagetype>`
-- `urlencode` - For url params, passed as key value pairs in `dict`.
-- `format_html` - Securely builds the link avoiding [XSS](https://en.wikipedia.org/wiki/Cross-site_scripting) attacks.
+- `reverse` - Builds the URL dynamically, independent of any URL pattern changes. Format: `admin:<app_name>_<target_modelname>_<pagetype>`
+- `urlencode` - For URL parameters, passed as key-value pairs in a `dict`.
+- `format_html` - Securely builds the link while avoiding [XSS](https://en.wikipedia.org/wiki/Cross-site_scripting) attacks.
 
 See more examples in `store > admin.py`.
 
@@ -180,11 +180,11 @@ Just add to the `<Model>Admin` class:
 
 ```py
 search_fields = ["first_name", "last_name"]
-# We can also add lookup types, e.g. if we want to match from starting + case insensitive:
+# We can also add lookup types, e.g., if we want to match from the start + case-insensitive:
 search_fields = ["first_name__istartswith", "last_name__istartswith"]
 ```
 
-This adds a search bar which would return results matched in either of the fields.
+This adds a search bar that returns results matched in either of the fields.
 
 ## Adding Filtering to the List Page
 
@@ -194,12 +194,12 @@ Just add the attr e.g. in `ProductAdmin`:
 list_filter = ["collection", "last_update"]
 ```
 
-And a new side bar with appear with options e.g. to select a collection, and only those products would be shown.  
+And a new side bar will appear with options e.g. to select a collection, and only those products would be shown.  
 (This basically uses a `WHERE` clause.)
 
 ### Custom Filters
 
-Define a `admin.SimpleListFilter` class:
+Define an `admin.SimpleListFilter` class:
 
 > Read: [Using a SimpleListFilter](https://docs.djangoproject.com/en/5.2/ref/contrib/admin/filters/#using-a-simplelistfilter)
 
@@ -216,13 +216,13 @@ class InventoryStatusListFilter(admin.SimpleListFilter):
             return queryset.filter(inventory__lt=10)
 ```
 
-And then just add the name of the class to `list_filter` attr.
+And then just add the name of the class to the `list_filter` attr.
 
 ## Facets
 
 > New in Django 5.0.
 
-When any filters are there, it shows the count of records corresponding to every filter, add following to `<Model>Admin`:
+When any filters are there, it shows the count of records corresponding to every filter. Add the following to `<Model>Admin`:
 
 ```py
 show_facets = admin.ShowFacets.ALWAYS
@@ -234,9 +234,9 @@ Note: [Performance considerations with facets](https://docs.djangoproject.com/en
 
 ## Creating Custom Actions
 
-By default, we've `Delete selected ...` action in the `changelist` pages.
+By default, we've the `Delete selected ...` action in the `changelist` pages.
 
-To add custom action e.g. setting inventory for selected products to 0, we can define a function:
+To add a custom action, e.g. setting inventory for selected products to 0, we can define a function:
 
 ```py
 @admin.action(description="Clear inventory for")
@@ -245,7 +245,7 @@ def clear_inventory(self, request, queryset: QuerySet):
     self.message_user(request, f"Successfully cleared inventory for {count} product(s).")
 ```
 
-And add following to the `<Model>Admin`:
+And add the following to the `<Model>Admin`:
 
 ```py
 actions = ["clear_inventory"]
@@ -286,11 +286,11 @@ search_fields = ["<field_on_which_we_want_to_search_the_customer>", ...]
 
 In forms, i.e. `/add` pages, basic data validation is already there as per the field types in `models.py`.
 
-But, we can add a lot of custom validations as per our requirement.
+But we can add a lot of custom validations as per our requirement.
 
 ### `null`, `blank`
 
-If we want to leave a field empty, we need to have both `null=True, blank=True` in Model field.
+If we want to leave a field empty, we need to have both `null=True, blank=True` in the model field.
 
 e.g.
 
@@ -299,26 +299,26 @@ e.g.
 ```
 
 `null=True` for DB.  
-Without this, if `blank=True` is there, then form would get submit, but then `IntegrityError` would arise since DB rejected the data.
+Without this, if `blank=True` is there, then form would get submitted, but then `IntegrityError` would arise since DB rejected the data.
 
 `blank=True` for the field to accept blank value.  
 Without this, even if `null=True` is there, form wouldn't submit.
 
 ### `validators`
 
-Suppose we've a `PositiveIntegerField` which allows 0 by default, but we want minimum 1. We can add following:
+Suppose we've a `PositiveIntegerField` which allows 0 by default, but we want minimum 1. We can add the following:
 
 ```py
 inventory = models.PositiveIntegerField(validators=[MinValueValidator(limit_value=1)])
 ```
 
-This would now don't allow 0, and would show a descriptive error message ("Ensure this value is greater than or equal to 1.") by itself.
+This would now not allow 0, and would show a descriptive error message ("Ensure this value is greater than or equal to 1.") by itself.
 
 **All about Validators: https://docs.djangoproject.com/en/5.2/ref/validators**
 
 ## Editing Children Using Inlines
 
-E.g., we've `Order` & `OrderItem` tables, where `OrderItem` is a children of `Order` (or we can say `Order` is the parent of `OrderItem`) since `OrderItem` has a `ForeignKey` to `Order`.
+E.g., we've `Order` & `OrderItem` tables, where `OrderItem` is a child of `Order` (or we can say `Order` is the parent of `OrderItem`) since `OrderItem` has a `ForeignKey` to `Order`.
 
 In cases like these, we can add inline adding/changing (inserting/updating) of children in the parent's `/add` or `/change` page.
 
@@ -329,7 +329,7 @@ class OrderItemInline(admin.TabularInline):
     model = models.OrderItem
 ```
 
-And add following to `OrderAdmin` class:
+And add the following to `OrderAdmin` class:
 
 ```py
     inlines = [OrderItemInline]
@@ -347,11 +347,11 @@ Suppose we want to inline the `Tag` in `/product` pages. The process is pretty s
 
 1. Register `models.Tag` in `tags.admin.py`, and add `__str__` in `models.Tag`.
 
-2. Define `TaggedItemInline` class in `store.admin.py`, only difference is it extends `GenericTabularInline` instead of `TabularInline`. And add to `inlines` in `ProductAdmin`.
+2. Define `TaggedItemInline` class in `store.admin.py`. Only difference is it extends `GenericTabularInline` instead of `TabularInline`. And add to `inlines` in `ProductAdmin`.
 
 That's it. But, notice we've `model = tags_models.TaggedItem` in `TaggedItemInline`, but still on `/product` page, we're seeing like we did `model = tags_models.Tag`.
 
-And, if we actually change to `model = tags_models.Tag`, we get SystemCheckError: `'tags.Tag' has no GenericForeignKey`
+And if we actually change to `model = tags_models.Tag`, we get `SystemCheckError: 'tags.Tag' has no GenericForeignKey'`
 
 Looks like that's how generic models work.
 
@@ -359,12 +359,12 @@ Looks like that's how generic models work.
 
 ### The Problem
 
-In above "Using Generic Relations", we had to add `from tags import models as tags_models` so that we can use inside `TaggedItemInline` class.
+In the above "Using Generic Relations", we had to add `from tags import models as tags_models` so that we can use inside `TaggedItemInline` class.
 
-But, this breaks our goal of keeping our apps separate, the very reason why we added generic model at the first place.
+But this breaks our goal of keeping our apps separate — the very reason why we added the generic model in the first place.
 
 ### Solution
 
-We need to create a new app, in that app, we would import from both `store` and `tags` app, and put the implementation of the inline functionality we want, there.
+We need to create a new app. In that app, we would import from both `store` and `tags` apps, and put the implementation of the inline functionality we want, there.
 
 For understanding, watch the video (`Extending Pluggable Apps - 4m 43s`) again.
