improve notes part1.1

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -1,3 +1,42 @@
+## What is Django
+
+[wikipedia.org/wiki/Django\_(web_framework)](<https://en.wikipedia.org/wiki/Django_(web_framework)>):
+
+[[Read latest](<https://en.wikipedia.org/wiki/Django_(web_framework)>)]
+
+> Django is a free and open-source, Python-based web framework that runs on a web server. It follows the model–template–views (MTV) architectural pattern. It is maintained by the Django Software Foundation (DSF), an independent organization established in the US as a 501(c)(3) non-profit.
+>
+> Django's primary goal is to ease the creation of complex, database-driven websites. The framework emphasizes reusability and "pluggability" of components, less code, low coupling, rapid development, and the principle of don't repeat yourself. Python is used throughout, even for settings, files, and data models. Django also provides an optional administrative create, read, update and delete interface that is generated dynamically through introspection and configured via admin models.
+>
+> Some well-known sites that use Django include Instagram, Mozilla, Disqus, Bitbucket, Nextdoor, and Clubhouse.
+
+Also, read: [wikipedia.org/wiki/Django\_(web_framework)#Features](<https://en.wikipedia.org/wiki/Django_(web_framework)#Features>)
+
+<br>
+
+Official Docs: [docs.djangoproject.com](https://docs.djangoproject.com)
+
+Overview / At a glance: [docs.djangoproject.com/en/5.2/intro/overview](https://docs.djangoproject.com/en/5.2/intro/overview)
+
+## How the Web Works
+
+Web applications have a frontend (client-side, what you see) and a backend (server-side, data processing). Communication happens via HTTP requests and responses.
+
+### Rendering Web Pages:
+
+There are two ways to render pages:
+
+1. **Server-side rendering**: Server generates full HTML pages.
+2. **Client-side rendering**: Server sends only data (e.g., JSON); client uses tools like **React, Angular, or Vue** to build pages.
+
+Client-side rendering is now more common due to better scalability.
+
+**[Important](#important):**
+
+> **We don't use templates in Django that often now. Django is primarily used to build APIs. (DRF)**
+
+## Setting Up the Development Environment
+
 ## Creating Your First Django Project
 
 ### Virtual Environment:
@@ -55,30 +94,29 @@ Ultimate Djangosamyak@Mac Ultimate Django %
 
 That is, the directory name appears as a prefix before `samyak@Mac`.
 
-## Using the Integrated Terminal in VSCode
+### `startproject`
 
-Important: VS Code activates the venv in the terminal automatically when the Python interpreter of current project is set to the venv one. Else, it does not.
+```bash
+django-admin startproject <projectname> <directoryname>
+```
 
-## Creating Your First App
+`directoryname` is optional, removing it would create the project inside a new directory with the same name as project.
 
-https://en.wikipedia.org/wiki/Django_(web_framework):
+Moving forward, we'll use `python manage.py` instead of `django-admin`, which is a wrapper around `django-admin`, which know about our project settings `settings.py`.
 
-> It follows the model–template–views (MTV) architectural pattern.
-> Despite having its own nomenclature (such as naming the callable objects generating the HTTP responses "views"), the core Django framework can be seen as an MVC architecture.  
-> It consists of:  
-> -- an object-relational mapper (ORM) that mediates between data models (defined as Python classes) and a relational database ("Model"),  
-> -- a system for processing HTTP requests with a web templating system ("View"),  
-> -- and a regular-expression-based URL dispatcher ("Controller").
+### `runserver`
 
-<br>
-
-We can specify the port number explicitly if some other app is running on the default port 8000:
+(We can optionally specify the port number if some other app is running on the default port 8000.)
 
 ```bash
 python manage.py runserver 9000
 ```
 
-<br>
+## Using the Integrated Terminal in VSCode
+
+Important: VS Code activates the venv in the terminal automatically when the Python interpreter of current project is set to the venv one. Else, it does not.
+
+## Creating Your First App
 
 See `INSTALLED_APPS` in `settings.py`.
 
@@ -88,15 +126,31 @@ See `INSTALLED_APPS` in `settings.py`.
 
 ## Writing Views
 
-Views or view functions take a request and return a response.
+Views or view functions take a request and return a response. So, it's a **request handler** actually.
+
+We can render a template and return the HTML using:
+
+```py
+from django.shortcuts import render
+```
+
+Just in any rare case, we can also return HTML directly:
+
+```py
+from django.http import HttpResponse
+```
 
 ## Mapping URLs to Views
+
+Read docs.
 
 ## Using Templates
 
 We can replace Django's default template engine with a preferred template engine if we want.
 
-> Important: We don't use templates in Django that often now. Django is primarily used to build APIs.
+### Important
+
+**We don't use templates in Django that often now. Django is primarily used to build APIs. (DRF)**
 
 ## Debugging Django Applications in VSCode
 
