improve notes 1.1: venv

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -37,6 +37,11 @@ Client-side rendering is now more common due to better scalability.
 
 ## Setting Up the Development Environment
 
+- Python
+
+- VS Code
+  - [Python](https://marketplace.visualstudio.com/items?itemName=ms-python.python) Extension
+
 ## Creating Your First Django Project
 
 ### Virtual Environment:
@@ -47,52 +52,37 @@ Install pipenv:
 pip install pipenv
 ```
 
-Now, move to the directory where you want the virtual environment to be, then run:
+Now, inside the dir where you want to use the venv, run:
 
 ```bash
 pipenv install django
 ```
 
-This creates a virtual environment at a location like:
+This creates a venv dir at a location like:
 
 ```
 /Users/samyak/.local/share/virtualenvs/Ultimate_Django-xxxxxxxx
 ```
 
-All the libraries are installed here.
+All the libraries are installed there.
 
-A `Pipfile` is also created, which looks like a `requirements.txt` file, but `pipenv` automatically adds the packages you install (using `pipenv`) to this file.
+A `Pipfile` is also created, which looks like a `requirements.txt` file, but `pipenv` automatically adds the packages you install (using `pipenv install`) to this file.
 
 <br>
 
-To get the path of the current virtual environment:
-
-```bash
-pipenv --venv
-```
-
-To activate the virtual environment:
+To activate the venv:
 
 ```bash
 pipenv shell
 ```
 
-<br>
-
-**Important:** Make sure whenever you do anything in the terminal inside this directory, the virtual environment is activated.
-The terminal would look like:
+The terminal would now look like:
 
 ```
 (Ultimate Django) samyak@Mac Ultimate Django %
 ```
 
-or
-
-```
-Ultimate Djangosamyak@Mac Ultimate Django %
-```
-
-That is, the directory name appears as a prefix before `samyak@Mac`.
+i.e., the directory name appears as a prefix before `samyak@Mac`.
 
 ### `startproject`
 
@@ -114,7 +104,23 @@ python manage.py runserver 9000
 
 ## Using the Integrated Terminal in VSCode
 
-Important: VS Code activates the venv in the terminal automatically when the Python interpreter of current project is set to the venv one. Else, it does not.
+1. Open the project dir in VS.
+
+2. Set the python interpreter path.
+
+   To get the path of the current venv:
+
+   ```bash
+   pipenv --venv
+   ```
+
+3. Now, whenever you'd open terminal in this VS code project, venv would automatically be activated by VS.
+
+   Again, remember project dir name should be added as prefix.
+
+### Troubleshooting
+
+If venv is not being activated automatically by VS, it could be because of [Python Environments](https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-python-envs) extension, **uninstall it**.
 
 ## Creating Your First App
 
