minor change in notes p1

--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -166,14 +166,14 @@ To avoid name clash in case of circular dependency:
   Use:
 
   ```py
-  related_name='+'
+  related_name="+"
   ```
 
 - **Need a custom reverse relation name?**
   Use:
 
   ```py
-  related_name='custom_name'
+  related_name="custom_name"
   ```
 
 https://docs.djangoproject.com/en/5.2/ref/models/fields/#django.db.models.ForeignKey.related_name
