--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -27,7 +27,7 @@ Whenever `makemigrations` is done again, if there are changes, a new migration f
 When a field (i.e., column) is added later in the model, there should be a value to populate all the existing records:
 
 - Option 1: make the field nullable with `null=True`
-- Option 2: add a default `default='something'`
+- Option 2: add a default `default="something"`
 - Option 3: supply a default value in the terminal (this is not saved in the model but only used for previous records and stored in the current migration file)
 
 Choice depends on our requirements.
