--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -7,12 +7,12 @@ Docs: https://docs.djangoproject.com/en/5.2/topics/db/queries
 We needed to do:
 
 ```py
-sql = 'SELECT * FROM product'
+sql = "SELECT * FROM product"
 result = execute(sql)
 for row in result:
     product = Product()
-    product.title = row['title']
-    product.price = row['price']
+    product.title = row["title"]
+    product.price = row["price"]
 ```
 
 [Object-Relational Mapping](https://en.wikipedia.org/wiki/Object–relational_mapping)
@@ -186,7 +186,7 @@ Check the code and **important points** in `playground.views.home`.
 > [Researched entirely by me.]
 
 ```py
-Product.objects.prefetch_related('promotions').all()
+Product.objects.prefetch_related("promotions").all()
 ```
 
 Should generate the following, right?
@@ -255,7 +255,7 @@ https://docs.djangoproject.com/en/5.2/ref/models/querysets/#annotate
 If a lookup type name (like `count`) is the same as a field name, **Django will always treat it as the field name**. To use the `Count` aggregate function for counting related objects, you must explicitly use `annotate()` with `from django.db.models import Count`.
 
 - `filter(product__count__gt=5)` — Filters based on the **value of the `count` field** on the `Product` model.
-- `annotate(c=Count('product')).filter(c__gt=5)` — Filters based on the **number of related `product` objects**.
+- `annotate(c=Count("product")).filter(c__gt=5)` — Filters based on the **number of related `product` objects**.
 
 Read: https://g.co/gemini/share/d8c6d112540b
 
