--- a/Notes/Part 1/5. The Admin Site.md
+++ b/Notes/Part 1/5. The Admin Site.md
@@ -18,8 +18,8 @@ Side-note: We can change the admin headings if required:
 In the base `urls.py` of our project, do:
 
 ```py
-admin.site.site_header = 'Storefront Admin'
-admin.site.index_title = 'Admin'
+admin.site.site_header = "Storefront Admin"
+admin.site.index_title = "Admin"
 ```
 
 ## Registering Models
@@ -39,7 +39,7 @@ To set a default ordering of the objects (used in the admin page and when queryi
 
 ```py
 class Meta:
-    ordering = ['title', 'any_other_field']
+    ordering = ["title", "any_other_field"]
 ```
 
 ## Customizing the List Page
@@ -137,7 +137,7 @@ Read: https://g.co/gemini/share/ff62df484bbc
 
 ### The Solution: Annotate the QuerySet
 
-Override the `get_queryset` method in `CollectionAdmin` to annotate the queryset with the product count: `.annotate(products_count=Count('product'))`.
+Override the `get_queryset` method in `CollectionAdmin` to annotate the queryset with the product count: `.annotate(products_count=Count("product"))`.
 
 ```py
 @admin.register(models.Collection)
@@ -268,7 +268,7 @@ readonly_fields = ["field1"]  # show but uneditable
 
 # Now, a cool one:
 # As we know we've a `slug` field in `Product`, now, every time we add a new product, we add a title, but this would require us to write a slug ourselves, but it should be auto-generated from the title, so we can do:
-prepopulated_fields = {'slug': ["title"]}
+prepopulated_fields = {"slug": ["title"]}
 # This would auto-generate the `slug` as we write `title` in the form. And is editable.
 # Since slug is a `models.SlugField()`, `title` = "Whey Protein" would automatically convert to `slug` = "whey_protein"
 
