minor fix in notes using ai

--- a/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
+++ b/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
@@ -69,6 +69,7 @@ RESTful APIs help build systems that are:
 ### JSON (JavaScript Object Notation):
 
 - Common format for sending/receiving data between client and server.
+
 - Structure:
 
   ```json
@@ -175,28 +176,28 @@ Just like we can show [custom fields in admin](/Notes/Part%201/5.%20The%20Admin%
         return round(product.unit_price * Decimal(1.1), 2)
 ```
 
-We can also change with what name existing fields of DB show in API:
+We can also change the name with which existing DB fields appear in the API:
 
 ```py
 new_name = Serializer.<Field>(source="field_name_in_db")
 ```
 
 Why would we want to do this?  
-One use-case is: internal name is changed, but if we change the external field usage name, all existing code of our current users would break, we can avoid that using this.
+One use-case: internal name is changed, but if we change the external field usage name, all existing client code would break, we can avoid that using this.
 
 ## Serializing Relationships
 
 We've many ways to serialize (and show) related fields on our API:
 
-- Primary Key (pk/id of related field)
+- **Primary Key** (pk/id of related field)
 
-  E.g., to see collection id of each product, in ProductSerializer:
+  E.g., to see collection id of each product, in `ProductSerializer`:
 
   ```py
       collection = serializers.PrimaryKeyRelatedField(queryset=Collection.objects.all())
   ```
 
-- String (another column of related field's table)
+- **String** (another column of related field's table)
 
   To see collection title:
 
@@ -205,7 +206,7 @@ We've many ways to serialize (and show) related fields on our API:
       # + `select_related("collection")` in view, else N+1 query problem
   ```
 
-- Nested Object (the object itself of related field table)
+- **Nested Object** (the object itself of related field table)
 
   To see whole collection object:
 
@@ -214,7 +215,7 @@ We've many ways to serialize (and show) related fields on our API:
       collection = CollectionSerializer()
   ```
 
-- Hyperlink (link to related's field's API endpoint)
+- **Hyperlink** (link to related field's API endpoint)
 
   To see link to collection endpoint:
 
@@ -228,7 +229,7 @@ We've many ways to serialize (and show) related fields on our API:
 
   1. "AssertionError at /store/products/: `HyperlinkedRelatedField` requires the request in the serializer context. Add `context={'request': request}` when instantiating the serializer."
   2. `name="collection-detail"` in `urls.urlpatterns.path()`
-  3. "collections/<int:pk>/" in `urls.urlpatterns.path()` instead of "collections/<int:id>/", this is DRF's default convention.
+  3. `"collections/<int:pk>/"` in `urls.urlpatterns.path()` instead of `"collections/<int:id>/"`, this is DRF's default convention.
 
 ## Model Serializers
 
@@ -255,13 +256,13 @@ class ProductSerializer(serializers.ModelSerializer):
 
 ## Deserializing Objects
 
-Deserialize: Get model object from `dict` which we get from `request.data`.
+Deserialize: Get model object from a `dict` received in `request.data`.
 
 Usage: E.g., when using `POST`, we receive the data from the client.
 
-Also, we need to add the HTTP methods allowed on a particular endpoint, `GET` is supported by default.
+Also, we need to add the HTTP methods allowed on a particular endpoint. `GET` is supported by default.
 
-> And this brings up a form to `POST` on the endpoint, that's the beauty of DRF's browseable API.
+> And this brings up a form to `POST` on the endpoint, that's the beauty of DRF's browsable API.
 
 Check the code in `store.views.product_list()`.
 
@@ -271,13 +272,14 @@ Check the code in `store.views.product_list()`.
 
 - `request.data` == `serializer.initial_data`: Actual `dict` came with `POST`.
 
-- `serializer.is_valid(raise_exception=True)`: Run the validations (when defining <ModelName>Serializer class, DRF automatically generate the rules on the basis of `models.<Field>`).
+- `serializer.is_valid(raise_exception=True)`: Runs validation. DRF auto-generates rules based on `models.<Field>`.
 
-- `serializer.validated_data`: Again `dict`, but first, we know this data is valid as per our DB. Second, this `dict` contains related field(s) as an object.
+- `serializer.validated_data`: A validated `dict`. Related fields are actual objects now.
 
 ### Customizing Validations
 
-Consider the case where we want `password` field to be matched with `confirm_password` field, if not matched then the data is not valid, we'd need to override `validate` method in `<ModelName>Serializer` class:
+Suppose we want `password` field to match `confirm_password` field. If not matched, then the data is invalid.  
+We can override `validate` method in `<ModelName>Serializer` class:
 
 ```py
 def validate(self, data):
@@ -330,7 +332,7 @@ def update(self, instance, validated_data):
 
 ## Deleting Objects
 
-Suppose if want to delete a product:
+To delete a product:
 
 ```py
         # `ProtectedError`: protected foreign keys, so:
@@ -344,9 +346,12 @@ Suppose if want to delete a product:
 
 ### Which status code to return?
 
-Determine: [wikipedia.org/wiki/List_of_HTTP_status_codes](https://en.wikipedia.org/wiki/List_of_HTTP_status_codes) or [httpstatuses.io](https://httpstatuses.io)
+Refer:
 
-## Exercise- Building the Collections API
+- [wikipedia.org/wiki/List_of_HTTP_status_codes](https://en.wikipedia.org/wiki/List_of_HTTP_status_codes)
+- [httpstatuses.io](https://httpstatuses.io)
+
+## Exercise: Building the Collections API
 
 Same as above implementation, only difference is using following in views:
 
