minor changes in prev notes

--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -175,7 +175,7 @@ And then `migrate` to create the tables in our new Postgres DB.
 
 ## Generating Dummy Data
 
-https://www.mockaroo.com
+[mockaroo.com](https://www.mockaroo.com)
 
 > Run `seed.sql` given in the course to populate the data. (Delete all the previous data first.)
 
