--- a/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
+++ b/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
@@ -336,8 +336,8 @@ To delete a product:
 
 ```py
         # `ProtectedError`: protected foreign keys, so:
-        if product.orderitem_set.count() > 0:
-            return Response(status=status.HTTP_405_METHOD_NOT_ALLOWED)
+        if product.orderitem_set.exists():
+            return Response(status=status.HTTP_409_CONFLICT)
 
         product.delete()
         # Again, this is REST convention:
@@ -353,12 +353,21 @@ Refer:
 
 ## Exercise: Building the Collections API
 
-Same as above implementation, only difference is using following in views:
+Similar as above implementation, only differences are
 
-```py
-Collection.objects.annotate(product_count=Count("product"))
-```
+1. Using following in views:
 
-which adds a `product_count` field to the API.
+   ```py
+       Collection.objects.annotate(product_count=Count("product"))
+   ```
+
+2. And following in serializers:
+
+   ```py
+       product_count = serializers.IntegerField(read_only=True)
+       # `read_only=True` so that this field can't be changed using `POST`/`PUT`/`PATCH`.
+   ```
+
+These add a read-only `product_count` field to the API.
 
 See the code, and/or watch the video again.
