--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -1,8 +1,8 @@
 ## What is Django
 
-[wikipedia.org/wiki/Django\_(web_framework)](<https://en.wikipedia.org/wiki/Django_(web_framework)>):
+[wikipedia.org/wiki/Django_(web_framework)](https://en.wikipedia.org/wiki/Django_(web_framework)):
 
-[[Read latest](<https://en.wikipedia.org/wiki/Django_(web_framework)>)]
+[[Read latest](https://en.wikipedia.org/wiki/Django_(web_framework))]
 
 > Django is a free and open-source, Python-based web framework that runs on a web server. It follows the model–template–views (MTV) architectural pattern. It is maintained by the Django Software Foundation (DSF), an independent organization established in the US as a 501(c)(3) non-profit.
 >
@@ -10,7 +10,7 @@
 >
 > Some well-known sites that use Django include Instagram, Mozilla, Disqus, Bitbucket, Nextdoor, and Clubhouse.
 
-Also, read: [wikipedia.org/wiki/Django\_(web_framework)#Features](<https://en.wikipedia.org/wiki/Django_(web_framework)#Features>)
+Also, read: [wikipedia.org/wiki/Django_(web_framework)#Features](https://en.wikipedia.org/wiki/Django_(web_framework)#Features)
 
 <br>
 
