minor improvements in previous notes

--- a/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
+++ b/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
@@ -284,9 +284,17 @@ We can override `validate` method in `<ModelName>Serializer` class:
 ```py
 def validate(self, data):
     if data["password"] != data["confirm_password"]:
-        return serializers.ValidationError("Passwords do not match.")
+        raise serializers.ValidationError("Passwords do not match.")
     return data
 ```
+
+[Writing custom validators](https://www.django-rest-framework.org/api-guide/validators/#writing-custom-validators)
+
+- [Field-level validation](https://www.django-rest-framework.org/api-guide/validators/#field-level-validation)
+
+[Validation](https://www.django-rest-framework.org/api-guide/serializers/#validation)
+
+- [Object-level validation](https://www.django-rest-framework.org/api-guide/serializers/#object-level-validation)
 
 ## Saving Objects
 
@@ -353,21 +361,22 @@ Refer:
 
 ## Exercise: Building the Collections API
 
-Similar as above implementation, only differences are
+Similar as above implementation, only differences to add a read-only `product_count` field to the API:
 
-1. Using following in views:
+1. In serializers:
+
+   ```py
+       # Since `product_count` is not a DB field:
+       product_count = serializers.IntegerField(read_only=True)
+       # `read_only=True`: Restrict adding/changing while `POST`/`PUT`/`PATCH`.
+   ```
+
+   [Specifying read only fields](https://www.django-rest-framework.org/api-guide/serializers/#specifying-read-only-fields)
+
+2. In views:
 
    ```py
        Collection.objects.annotate(product_count=Count("product"))
    ```
-
-2. And following in serializers:
-
-   ```py
-       product_count = serializers.IntegerField(read_only=True)
-       # `read_only=True` so that this field can't be changed using `POST`/`PUT`/`PATCH`.
-   ```
-
-These add a read-only `product_count` field to the API.
 
 See the code, and/or watch the video again.
