minor fix in notes

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -1,8 +1,8 @@
 ## What is Django
 
-[wikipedia.org/wiki/Django_(web_framework)](https://en.wikipedia.org/wiki/Django_(web_framework)):
+[wikipedia.org/wiki/Django\_(web_framework)](<https://en.wikipedia.org/wiki/Django_(web_framework)>):
 
-[[Read latest](https://en.wikipedia.org/wiki/Django_(web_framework))]
+[[Read latest](<https://en.wikipedia.org/wiki/Django_(web_framework)>)]
 
 > Django is a free and open-source, Python-based web framework that runs on a web server. It follows the model–template–views (MTV) architectural pattern. It is maintained by the Django Software Foundation (DSF), an independent organization established in the US as a 501(c)(3) non-profit.
 >
@@ -10,7 +10,7 @@
 >
 > Some well-known sites that use Django include Instagram, Mozilla, Disqus, Bitbucket, Nextdoor, and Clubhouse.
 
-Also, read: [wikipedia.org/wiki/Django_(web_framework)#Features](https://en.wikipedia.org/wiki/Django_(web_framework)#Features)
+Also, read: [wikipedia.org/wiki/Django\_(web_framework)#Features](<https://en.wikipedia.org/wiki/Django_(web_framework)#Features>)
 
 <br>
 
@@ -48,13 +48,13 @@ Client-side rendering is now more common due to better scalability.
 
 Install pipenv:
 
-```bash
+```sh
 pip install pipenv
 ```
 
 Now, inside the dir where you want to use the venv, run:
 
-```bash
+```sh
 pipenv install django
 ```
 
@@ -72,7 +72,7 @@ A `Pipfile` is also created, which looks like a `requirements.txt` file, but `pi
 
 To activate the venv:
 
-```bash
+```sh
 pipenv shell
 ```
 
@@ -86,7 +86,7 @@ i.e., the directory name appears as a prefix before `samyak@Mac`.
 
 ### `startproject`
 
-```bash
+```sh
 django-admin startproject <projectname> <directoryname>
 ```
 
@@ -98,7 +98,7 @@ Moving forward, we'll use `python manage.py` instead of `django-admin`, which is
 
 (We can optionally specify the port number if some other app is running on the default port 8000.)
 
-```bash
+```sh
 python manage.py runserver 9000
 ```
 
@@ -110,7 +110,7 @@ python manage.py runserver 9000
 
    To get the path of the current venv:
 
-   ```bash
+   ```sh
    pipenv --venv
    ```
 
@@ -168,6 +168,6 @@ https://django-debug-toolbar.readthedocs.io/en/latest/installation.html
 
 Install with:
 
-```bash
+```sh
 pipenv install django-debug-toolbar
 ```
