note about standard venv usage

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -46,6 +46,8 @@ Client-side rendering is now more common due to better scalability.
 
 ### Virtual Environment:
 
+**[NOTE: Found better (and more standard) [steps](https://fastapi.tiangolo.com/virtual-environments) for setting up and using venv while reading FastAPI docs.]**
+
 Install pipenv:
 
 ```sh
