minor fix in notes

--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -33,6 +33,8 @@ Note that ORMs are a bit slow compared to directly querying the DB due to the ob
 > "Premature optimization is the root of all evils."  
 > \- Donald Knuth
 
+## Resetting the Database
+
 ## Managers and QuerySets
 
 `ModelName.objects` is a `Manager` object, which is basically an interface to the DB.  
