--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -26,7 +26,7 @@ Types of relationships:
 
 ## Creating Models
 
-API Reference for model fields: https://docs.djangoproject.com/en/stable/ref/models/fields
+API Reference for model fields: https://docs.djangoproject.com/en/5.2/ref/models/fields
 
 <br>
 
