minor fixes from past

--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -186,6 +186,8 @@ This reduces DB hits.
      validators=[validate_product_image_size]
      ```
 
+- After any model changes, don't forget to run `makemigrations` & `migrate`.
+
 - Test upload: error message should be shown.
 
 ### File Extension Validation
