minor adds in notes

--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -164,6 +164,22 @@ https://docs.djangoproject.com/en/5.2/ref/models/querysets/#values
 
 **Imp:** Pay attention to `object.attr` usages. Check the code in `playground.views.home`.
 
+- Also, when is it ideal to use `defer`?
+
+  When the particular field would not be accessed at all / accessed very less times (specially when the field is heavy in size).
+
+  Read: [Gemini](https://g.co/gemini/share/59364713ce63)
+
+  So, I think:
+
+  - Not accessed at all - obviously `defer`.
+  - Accessed very less times -
+  - light weight - don't `defer`, additional DB queries could be more costlier (in terms of time) than loading all the light data in one go.
+  - heavy weight - `defer`, additional DB queries could still be less costlier than loading all the heavy data at once.
+  - Accessed decent times - don't `defer` else `N+1 query` like problem.
+
+  (Same applies to `only` as well.)
+
 ## Selecting Related Objects
 
 > `select_related()`: `INNER JOIN` in a single query; used in case of `OneToOneField` & `ForeignKey`
