--- a/Notes/Part 2/4. Django Authentication System.md
+++ b/Notes/Part 2/4. Django Authentication System.md
@@ -38,6 +38,8 @@
 
 - A function that processes a request before it reaches the view.
 
+- Each middleware takes an incoming request, adds something to it, and then passes it to the next middleware.
+
 - Can:
 
   - Modify request
